# och-pi-decoder

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  STREAM_RESILIENCE_IMPLEMENTATION.md  dev_server.py  pyproject.toml
deploy/: 10-pi-decoder-single-iface  README.md  captive-portal-dnsmasq.conf  config.toml.example  disable-readonly.sh  enable-readonly.sh  journald-pi-decoder.conf  pi-decoder-network.service  pi-decoder-network.sh  pi-decoder.service  setup.sh  sudoers-pi-decoder
deploy/pi-gen/: README.md  build.sh  config
deploy/pi-gen/stage-pi-decoder/: DEPENDS
deploy/pi-gen/stage-pi-decoder/00-install-packages/: 00-packages
deploy/pi-gen/stage-pi-decoder/01-install-app/: 00-run.sh
deploy/pi-gen/stage-pi-decoder/02-configure/: 00-run.sh
deploy/pi-gen/stage-pi-decoder/02-configure/files/: 20auto-upgrades  50unattended-upgrades  desktop-items-0.conf  desktop.conf  disable-screensaver.desktop  (+2 more)
deploy/pi-gen/stage-pi-decoder/03-boot-config/: 00-run.sh
integrations/shelly/: README.md  blu-wall-switch-4.js
shelly/: README.md  blu-wall-switch-4.js
src/pi_decoder/: __init__.py  __main__.py  cec.py  config.py  display.py  fsutil.py  hostname.py  main.py  mpv_manager.py  network.py  overlay.py  pco_client.py
src/pi_decoder/web/: app.py
src/pi_decoder/web/static/: app.js  style.css
src/pi_decoder/web/templates/: index.html
tests/: conftest.py  test_cec.py  test_config.py  test_display.py  test_fsutil.py  test_hostname.py  test_main.py  test_mpv_manager.py  test_network.py  test_overlay.py  test_pco_client.py  test_pigen.py  test_web.py
