[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-decoder"
version = "1.0.0"
description = "Raspberry Pi video decoder with Planning Center Online countdown overlay"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
    "jinja2>=3.1",
    "psutil>=5.9",
    "python-dateutil>=2.8",
    "tomli-w>=1.0",
    "yt-dlp>=2025.1",
]

[project.urls]
Homepage = "https://github.com/albin-user/och-pi-decoder"
Repository = "https://github.com/albin-user/och-pi-decoder.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "python-multipart>=0.0.6",
]

[project.scripts]
pi-decoder = "pi_decoder.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pi_decoder = ["web/templates/*.html", "web/static/*.css", "web/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
